--- a/src/style/carousel.css
+++ b/src/style/carousel.css
@@ -30,7 +30,7 @@
   margin-top: 15px;
 }
 .legend-banner-bar-desktop {
-  background-color: rgba(31, 63, 124, 0.35) !important;
+  background-color: rgba(31, 63, 124, 0.50) !important;
   height: 55px;
   border-radius: 0 50px 50px 0;
 }
@@ -41,13 +41,14 @@
   margin-right: 20px;
 }
 .legend-banner-bar-mobile {
-  background-color: rgba(31, 63, 124, 0.35) !important;
+  background-color: rgba(31, 63, 124, 0.50) !important;
   margin-bottom: 20px;
   height: 45px;
 }
 .carousel-text-box {
   opacity: 0.8 !important;
-  font-size: 14px;
+  /* font-size: 14px; */
+  font-size: 1.5rem;
   font-weight: 500;
   letter-spacing: 1px;
   color: #ffffff;
