--- a/src/style/feature.css
+++ b/src/style/feature.css
@@ -6,6 +6,8 @@
   background-color: rgb(31, 63, 124);
   height: 55px;
   border-radius: 0 50px 50px 0;
+  -webkit-border-radius: 0 50px 50px 0;
+  -moz-border-radius: 0 50px 50px 0;
 }
 .feature-banner-bar-desktop h2 {
   line-height: 55px;
@@ -52,7 +54,27 @@
   padding: 0 25px;
 }
 .feature-bar-title-text {
-  overflow: hidden;
+  /* font-size: 1.9rem; */
+  /* overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
+}
+
+/* Set a min and max size for title text 18px-28px */
+@media screen and (min-width: 46.94rem) {
+  .feature-bar-title-text {
+    font-size: calc(1.15rem + (1.9 - 1.15) * ((100vw - 46.94rem) / (93.75 - 46.94)));
+/* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+  }
+}
+@media screen and (min-width: 93.75rem) {
+  .feature-bar-title-text {
+    font-size: 1.9rem;
+  }
+}
+
+.feature-bar-title-text-mobile {
+  line-height: 45px; 
+  font-weight: 500;
+  text-align: center;
 }
