--- a/src/style/feature.css
+++ b/src/style/feature.css
@@ -25,7 +25,7 @@
   overflow: hidden;
   width: 75px;
   height: 75px;
-  border: 3px solid #d2222c;
+  /* border: 3px solid #d2222c; */
   color: #1f3f7c;
   text-decoration: none;
   border-radius: 100px;
