--- a/src/style/featureNav.css
+++ b/src/style/featureNav.css
@@ -8,7 +8,7 @@
   overflow: hidden;
   width: 100px;
   height: 100px;
-  border: 3px solid #d2222c;
+  /* border: 3px solid #d2222c; */
   color: #1f3f7c;
   text-decoration: none;
   border-radius: 100px;
