--- a/src/style/specialsLeftNav.css
+++ b/src/style/specialsLeftNav.css
@@ -5,6 +5,8 @@
     max-width: 275px;
     padding: 10px 0px;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .left-specials-nav ul {
     margin-top: 25px;
