--- a/src/style/specialsPage.css
+++ b/src/style/specialsPage.css
@@ -14,12 +14,13 @@
 }
 .specials-page-headline-bar h2 {
   line-height: 55px;
-  font-size: 2rem;
+  /* font-size: 2rem; */
   font-weight: 400;
 }
 
 .left-custom-quote {
   max-width: 275px;
+  margin: auto;
 }
 .left-custom-quote-button {
   background-color: #ea1d2e !important;
@@ -30,4 +31,22 @@
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   margin-left: 0;
+}
+
+/* Set a min and max size for title text 18px-28px */
+@media screen and (min-width: 46.94rem) {
+  .responsive-title-bar-text {
+    font-size: calc(1.15rem + (1.9 - 1.15) * ((100vw - 46.94rem) / (93.75 - 46.94)));
+/* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
+  }
+}
+@media screen and (min-width: 93.75rem) {
+  .responsive-title-bar-text {
+    font-size: 1.9rem;
+  }
+}
+@media screen and (min-width: 18rem) {
+  .responsive-title-bar-text-mobile {
+    font-size: calc(1.0rem + (1.4 - 1.0) * ((100vw - 18rem) / (29.8125 - 18)));
+  }
 }
