--- a/src/style/specialsItem.css
+++ b/src/style/specialsItem.css
@@ -1,6 +1,7 @@
+
 .specials-item-content-row {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /* padding-top: 20px; */
+    /* padding-bottom: 20px; */
 }
 
 .specials-item-img {
