--- a/src/style/feature.css
+++ b/src/style/feature.css
@@ -1,24 +1,7 @@
+.feature-row {
+  margin-right: 0px;
+}
 .feature-banner-row {
-  margin-top: 15px;
-  color: #ffffff;
-}
-.feature-banner-bar-desktop {
-  background-color: rgb(31, 63, 124);
-  height: 55px;
-  border-radius: 0 50px 50px 0;
-  -webkit-border-radius: 0 50px 50px 0;
-  -moz-border-radius: 0 50px 50px 0;
-}
-.feature-banner-bar-desktop h2 {
-  line-height: 55px;
-  font-weight: 500;
-  text-align: right;
-  margin-right: 20px;
-}
-.feature-banner-bar-mobile {
-  background-color: rgb(31, 63, 124);
-  margin-bottom: 20px;
-  height: 45px;
 }
 .feature-bar-img {
   float: left;
@@ -40,46 +23,4 @@
   transition: transform 0.5s ease;
   -webkit-transition: transform 0.5s ease;
   -moz-transition: transform 0.5s ease;
-}
-
-.feature-description {
-  height: 180px;
-  font-size: 1.5rem;
-  display: table-cell;
-  vertical-align: middle;
-  color: black;
-}
-
-.feature-description-mobile {
-  padding: 0 25px;
-}
-.feature-bar-title-text {
-  /* font-size: 1.9rem; */
-  /* overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; */
-}
-
-/* Set a min and max size for title text 18px-28px */
-@media screen and (min-width: 46.94rem) {
-  .feature-bar-title-text {
-    font-size: calc(1.15rem + (1.9 - 1.15) * ((100vw - 46.94rem) / (93.75 - 46.94)));
-/* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
-  }
-}
-@media screen and (min-width: 93.75rem) {
-  .feature-bar-title-text {
-    font-size: 1.9rem;
-  }
-}
-@media screen and (min-width: 18rem) {
-  .feature-bar-title-text-mobile {
-    font-size: calc(1.0rem + (1.4 - 1.0) * ((100vw - 18rem) / (29.8125 - 18)));
-  }
-}
-
-.feature-bar-title-text-mobile {
-  line-height: 45px; 
-  font-weight: 500;
-  text-align: center;
 }
