--- a/src/style/featureNav.css
+++ b/src/style/featureNav.css
@@ -6,6 +6,8 @@
   margin-top: 16px;
   display: inline-block;
   overflow: hidden;
+  /* REQUIRED for SAFARI - zoom effect overflow was not hidden: */
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
   width: 100px;
   height: 100px;
   /* border: 3px solid #d2222c; */
