--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -11,24 +11,141 @@
   background-image: linear-gradient(-90deg, #3c0472, #1F3F7C);
    /* #3c0472, #5D00B7 */
 }
-
 #cardSection{
     background-color: rgba(221, 221, 221, 0.5);
     padding: 4rem 0;
 }
 
-/* Responsive header */
 
-/* @media only screen and (min-width: 826px) {
-  .mobile-header {
-    display: none;
+/** BANNERS **/
+.banner-row {
+  /* margin-top: 15px; */
+  color: #ffffff;
+}
+.feature-banner-bar-desktop {
+  background-color: rgb(31, 63, 124);
+  height: 55px;
+  border-radius: 0 50px 50px 0;
+  -webkit-border-radius: 0 50px 50px 0;
+  -moz-border-radius: 0 50px 50px 0;
+}
+.feature-banner-bar-desktop h2 {
+  line-height: 55px;
+  font-weight: 500;
+  text-align: right;
+  margin-right: 20px;
+}
+.banner-bar-mobile {
+  background-color: rgb(31, 63, 124);
+  margin-bottom: 20px;
+  height: 45px;
+}
+
+/* Set a min and max size for title text 18px-28px */
+@media screen and (min-width: 46.94rem) {
+  .responsive-banner-bar-title-text-desktop {
+    font-size: calc(1.15rem + (1.9 - 1.15) * ((100vw - 46.94rem) / (93.75 - 46.94)));
+/* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
   }
 }
-@media only screen and (max-width: 825px) {
-  .desktop-header {
-    display: none;
+@media screen and (min-width: 93.75rem) {
+  .responsive-banner-bar-title-text-desktop {
+    font-size: 1.9rem;
   }
 }
-.mobile-header {
-  margin-bottom: 0px;
-} */
+@media screen and (min-width: 18rem) {
+  .responsive-banner-bar-title-text-mobile {
+    font-size: calc(1.0rem + (1.4 - 1.0) * ((100vw - 18rem) / (29.8125 - 18)));
+  }
+}
+.responsive-banner-bar-title-text-mobile {
+  line-height: 45px; 
+  font-weight: 500;
+  text-align: center;
+}
+/** /BANNERS **/
+
+
+/** CONTENT **/
+.content-description {
+  /* height: 180px; */
+  padding: 0px 30px;
+  font-size: 1.5rem;
+  display: table-cell;
+  vertical-align: middle;
+  color: black;
+}
+
+.content-description-mobile {
+  padding: 0 25px;
+}
+/** /CONTENT **/
+
+
+/** TEST feature nav**/
+/* Feature Nav */
+.feature-nav-row {
+  text-align: center;
+}
+.feature-nav-img {
+  margin-top: 16px;
+  display: inline-block;
+  overflow: hidden;
+  /* REQUIRED for SAFARI - zoom effect overflow was not hidden: */
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+  width: 100px;
+  height: 100px;
+  /* border: 3px solid #d2222c; */
+  color: #1f3f7c;
+  text-decoration: none;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+}
+.feature-nav-img img {
+  height: auto;
+  width: 100%;
+  transition: transform 0.5s ease;
+  -webkit-transition: transform 0.5s ease;
+  -moz-transition: transform 0.5s ease;
+}
+.feature-nav-img:hover img {
+  height: auto;
+  width: 100%;
+  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  -moz-transform: scale(1.5);
+}
+
+@media (hover: none) {
+  .feature-nav-img img {
+    transition: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    transform: none;
+    -webkit-transform: none;
+    -moz-transform: none;
+  }
+}
+
+.feature-nav-name {
+  color: #1f3f7c;
+  line-height: 1.2;
+  font-size: 0.6rem;
+  font-weight: 500;
+}
+.feature-nav-tour {
+  width: 175px;
+  height: 150px; /* 124 */
+  background-color: #1f3f7c;
+  color: #ffffff;
+  padding: 12px;
+}
+.feature-nav-tour img {
+  /* display: block; */
+  max-width: 150px;
+  max-height: 100px;
+  width: auto;
+  height: auto;
+}
+/* /Feature Nav */
