--- a/src/style/submitFile.css
+++ b/src/style/submitFile.css
@@ -26,3 +26,25 @@
     padding: 10px 0;
     /* margin-top: 20px !important; */
 }
+
+.custom-file-label {
+    margin-top: 0;
+}
+.submit-file-receive-info-section {
+    margin-top: 10px;
+}
+.frm_required {
+    color: #ea1d2e;
+}
+form label {
+    background-color: ;
+    margin-top: 10px;
+    color: #1f3f7c;
+    font-weight: 400;
+}
+.custom-file-label {
+    border-color: #1f3f7c !important;
+}
+form input, select, textarea {
+    border-color: #1f3f7c !important;
+}
