--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -1,13 +1,25 @@
-/* @import url('https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css'); */
-/* @import url('/react-responsive-carousel/lib/styles/carousel.min.css'); */
 
 /* .navbar.navbar-dark{
   margin: 0;
   background-image: linear-gradient(90deg, #3c0472, #5D00B7);
 } */
 
+html, body {
+  height: 100% !important;
+  /* position: relative; */
+}
+.content {
+  min-height: 100vh !important;
+  overflow: hidden;
+  display: block;
+  
+  position: relative;
+  padding-bottom: 220px;
+}
 .page-footer {
-  margin: 0;
+  position:absolute;
+  bottom: 0;
+  width: 100%;
   background-image: linear-gradient(-90deg, #3c0472, #1F3F7C);
    /* #3c0472, #5D00B7 */
 }
@@ -91,10 +103,11 @@
   margin-top: 16px;
   display: inline-block;
   overflow: hidden;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   color: #1f3f7c;
   text-decoration: none;
+  background-color: #d2222c;
   border: 3px solid #d2222c;
   border-radius: 100px;
   -webkit-border-radius: 100px;
@@ -146,7 +159,7 @@
 .feature-nav-name {
   color: #1f3f7c;
   line-height: 1.2;
-  font-size: 0.6rem;
+  font-size: 0.8rem; /* 0.6rem */
   font-weight: 500;
 }
 .feature-nav-tour {
