--- a/src/style/submitFile.css
+++ b/src/style/submitFile.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 766px) {
+    .file-transfer-main-row {
+      margin-bottom: 100px !important;
+    }
+  }
+
 .file-transfer-main-row h4{
     color: #1f3f7c;
     font-weight: 400;
