--- a/src/style/feature.css
+++ b/src/style/feature.css
@@ -8,7 +8,8 @@
   overflow: hidden;
   width: 75px;
   height: 75px;
-  /* border: 3px solid #d2222c; */
+  background-color: #d2222c;
+  border: 3px solid #d2222c;
   color: #1f3f7c;
   text-decoration: none;
   border-radius: 100px;
@@ -23,4 +24,7 @@
   transition: transform 0.5s ease;
   -webkit-transition: transform 0.5s ease;
   -moz-transition: transform 0.5s ease;
+}
+.feature-large-img {
+  margin-left: 40px;
 }
