--- a/src/style/gallery.css
+++ b/src/style/gallery.css
@@ -3,6 +3,11 @@
       min-width: 1104px;
     }
   }
+  @media screen and (max-width: 766px) {
+    .gallery-main-row {
+      margin-bottom: 100px !important;
+    }
+  }
 .gallery-main-row {
     padding: 0 40px;
 }
@@ -22,15 +27,12 @@
     background-color: #1f3f7c;
     color: #ffffff;
     height: auto;
-    /* max-width: 275px; */
     padding: 10px 5px;
     margin-bottom: 15px;
     font-size: .8rem;
 }
 .left-comments ul {
     list-style: none;
-    /* margin-top: 25px;
-    margin-bottom: 120px; */
 }
 .left-comments li {
     /* margin: 10px 0; */
@@ -38,9 +40,7 @@
 .left-comments h3 {
     text-align: center;
     font-weight: 400;
-    /* padding: 5px 25px; */
 }
 .left-comments li {
     /* padding: 5px 1px; */
 }
-
