--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,5 +1,5 @@
 header {
-  margin-bottom: 20px;
+  margin-bottom: 20px; /* 20px */
 }
 
 .header-main-logo {
@@ -11,33 +11,39 @@ header {
   float: left;
 }
 .header-main-logo-img {
-  height: 90px; /* 78 */
+  height: 100px; /* 90 */
+}
+.upper-bar {
+  height: 45px; /* 40 */
+  background-color: #ea1d2e;
 }
 .upper-bar-list {
   list-style-type: none;
   margin: 0;
   padding-left: 130px;
 }
-.upper-bar {
-  height: 40px;
-  background-color: #ea1d2e;
-}
 .upper-bar-text {
+  font-size: 1.2rem;
   margin-left: 40px;
   float: left;
   color: #ffffff;
-  line-height: 40px;
+  line-height: 45px;
 }
-.upper-bar-right-links {
-  font-size: 0.7rem;
+.upper-bar-right-item {
+  font-size: 0.9rem;  /* .7 */
   float: right;
-  margin-right: 40px;
+  margin-right: 22px; /* 40px */
+  line-height: 45px; /* 36 */
+}
+.upper-bar-right-item-link {
   color: #ffffff;
-  line-height: 40px;
-  border-bottom: 2px solid #ffffff;
+  text-decoration: none;
+  border-bottom: .14rem solid #ffffff;
+  padding: .1rem;
+  font-weight: 500;
 }
 .lower-bar {
-  height: 40px;
+  height: 45px; /* 40 */
   background-color: #ffffff;
 }
 .above-nav-list,
@@ -49,34 +55,77 @@ header {
 }
 .above-nav-item {
   color: #203e7c;
-  font-size: 0.9rem;
+  font-size: 1.1rem;  /* .9 */
+  font-weight: 400;
   margin-right: 1.3rem;
   text-decoration: none;
 }
 .nav-item {
-  font-size: 0.7rem;
-  margin-right: 1.1rem;
+  font-size: 0.9rem;  /* 0.7 */
+  font-weight: 400;
+  margin-right: 1.2rem; /* 1.1 */
   color: #000000;
   text-decoration: none;
   float: left;
 }
 .above-nav-item:hover,
 .nav-item:hover {
-  color: #666666;
+  color: #A9A9A9; /* #666666 */
+  transition: all 0.2s ease-in-out;
+}
+.upper-bar-right-item-link:hover {
+  color: #203e7c;
+  border-bottom: .14rem solid #203e7c;
 }
 .quick-tour-nav {
   float: right;
-  height: 40px;
-  margin-right: -209px;
+  height: 45px;
+  /* margin-right: -209px; */
+}
+.quick-tour-nav-button {
+  float: right;
+  background-color: #203e7c !important;
+  /* padding: 9px; */
+  margin-top: 0px !important;
+  margin-right: 0px !important;
+  width: 250px;
+  height: 45px; /* 40 */
+}
+.quick-tour-nav-button-hover {
+  width: 250px;
+  height: 100%;
+}
+.quick-tour-nav-button-text {
+  font-size: 1.2rem; /* 1.1*/
+  line-height: 0px;
+  letter-spacing: 0px;
+}
+/* button hover dev */
+ .quick-tour-nav-button-text {
+  height: auto;
+  width: 100%;
+  transition: transform 0.5s ease;
+  -webkit-transition: transform 0.5s ease;
+  -moz-transition: transform 0.5s ease;
+  
+}
+.quick-tour-nav-button:hover .quick-tour-nav-button-text {
+  height: auto;
+  width: 100%;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
 }
 
+/* */
+
 /* Responsive header */
-@media only screen and (min-width: 826px) {
+@media only screen and (min-width: 916px) {  /* 826px */
   .mobile-header {
     display: none;
   }
 }
-@media only screen and (max-width: 825px) {
+@media only screen and (max-width: 915px) {  /* 825px */
   .desktop-header {
     display: none;
   }
@@ -85,8 +134,11 @@ header {
 .mobile-nav-item {
   /* margin-right: 0px; */
   margin-bottom: 0px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #000000;
+}
+.mobile-dropdown-menu {
+  background-color: #1F3F7C;
 }
 .mobile-dropdown-menu a {
   padding: 0 !important;
@@ -95,23 +147,12 @@ header {
   font-weight: 300;
   height: 44px;
 }
+.mobile-dropdown-menu .mobile-drop-item:active, .mobile-dropdown-menu .mobile-drop-item:hover {
+  color: #000000 !important;
+}
+
 @media screen and (max-width: 356px) {
   .mobile-nav-item {
     margin-right: -20px;
   }
-}
-
-.quick-tour-nav-button {
-  float: right;
-  background-color: #203e7c !important;
-  padding: 9px;
-  margin-top: 0px !important;
-  margin-right: 0px !important;
-  width: 250px;
-  height: 40px;
-}
-.quick-tour-nav-button-text {
-  font-size: 1.1rem;
-  line-height: 0px;
-  letter-spacing: 0px;
 }
