--- a/src/style/carousel.css
+++ b/src/style/carousel.css
@@ -29,11 +29,10 @@
     /* line-height: 1.1; */
   }
 }
-.legend-banner-row {
+/* .legend-banner-row {
   margin-top: 15px;
-  
-}
-.legend-banner-bar-desktop {
+} */
+/* .legend-banner-bar-desktop {
   background-color: rgba(31, 63, 124, 0.50) !important;
   height: 55px;
   border-radius: 0 50px 50px 0;
@@ -54,7 +53,6 @@
 @media screen and (min-width: 46.94rem) {
   .legend-banner-bar-desktop h2 {
     font-size: calc(1.15rem + (1.9 - 1.15) * ((100vw - 46.94rem) / (93.75 - 46.94)));
-/* calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
   }
 }
 @media screen and (min-width: 93.75rem) {
@@ -66,7 +64,7 @@
   .legend-banner-bar-mobile h3 {
     font-size: calc(1.0rem + (1.4 - 1.0) * ((100vw - 18rem) / (29.8125 - 18)));
   }
-}
+} */
 
 /* @media screen and (max-width: 29.8125rem) {  
   .legend-banner-bar-mobile h3 {
@@ -87,12 +85,11 @@
 /* 390px 24.375rem */
 /* 340px 21.25rem */
 
-
-.feature-bar-title-text-mobile {
+/* .feature-bar-title-text-mobile {
   line-height: 45px; 
   font-weight: 500;
   text-align: center;
-}
+} */
 
 .carousel-text-box {
   opacity: 0.8 !important;
