--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,7 +1,6 @@
 header {
-  margin-bottom: 20px; /* 20px */
+  margin-bottom: 20px;
 }
-
 .header-main-logo {
   margin-top: 2px;
   margin-left: 30px;
@@ -11,10 +10,10 @@ header {
   float: left;
 }
 .header-main-logo-img {
-  height: 100px; /* 90 */
+  height: 100px;
 }
 .upper-bar {
-  height: 45px; /* 40 */
+  height: 45px;
   background-color: #ea1d2e;
 }
 .upper-bar-list {
@@ -30,10 +29,10 @@ header {
   line-height: 45px;
 }
 .upper-bar-right-item {
-  font-size: 0.9rem;  /* .7 */
+  font-size: 0.9rem;
   float: right;
-  margin-right: 22px; /* 40px */
-  line-height: 45px; /* 36 */
+  margin-right: 22px;
+  line-height: 45px;
 }
 .upper-bar-right-item-link {
   color: #ffffff;
@@ -43,7 +42,7 @@ header {
   font-weight: 500;
 }
 .lower-bar {
-  height: 45px; /* 40 */
+  height: 45px;
   background-color: #ffffff;
 }
 .above-nav-list,
@@ -55,22 +54,22 @@ header {
 }
 .above-nav-item {
   color: #203e7c;
-  font-size: 1.1rem;  /* .9 */
+  font-size: 1.1rem;
   font-weight: 400;
   margin-right: 1.3rem;
   text-decoration: none;
 }
 .nav-item {
-  font-size: 0.9rem;  /* 0.7 */
+  font-size: 0.9rem;
   font-weight: 400;
-  margin-right: 1.2rem; /* 1.1 */
+  margin-right: 1.2rem;
   color: #000000;
   text-decoration: none;
   float: left;
 }
 .above-nav-item:hover,
 .nav-item:hover {
-  color: #A9A9A9; /* #666666 */
+  color: #A9A9A9;
   transition: all 0.2s ease-in-out;
 }
 .upper-bar-right-item-link:hover {
@@ -80,23 +79,21 @@ header {
 .quick-tour-nav {
   float: right;
   height: 45px;
-  /* margin-right: -209px; */
 }
 .quick-tour-nav-button {
   float: right;
   background-color: #203e7c !important;
-  /* padding: 9px; */
   margin-top: 0px !important;
   margin-right: 0px !important;
   width: 250px;
-  height: 45px; /* 40 */
+  height: 45px;
 }
 .quick-tour-nav-button-hover {
   width: 250px;
   height: 100%;
 }
 .quick-tour-nav-button-text {
-  font-size: 1.2rem; /* 1.1*/
+  font-size: 1.2rem;
   line-height: 0px;
   letter-spacing: 0px;
 }
@@ -120,19 +117,18 @@ header {
 /* */
 
 /* Responsive header */
-@media only screen and (min-width: 916px) {  /* 826px */
+@media only screen and (min-width: 916px) {
   .mobile-header {
     display: none;
   }
 }
-@media only screen and (max-width: 915px) {  /* 825px */
+@media only screen and (max-width: 915px) {
   .desktop-header {
     display: none;
   }
 }
 .mobile-header,
 .mobile-nav-item {
-  /* margin-right: 0px; */
   margin-bottom: 0px;
   font-size: 1.2rem;
   color: #000000;
